[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "arize-phoenix-evals>=0.22.0",
    "arize-phoenix[client,evals]>=3.20.0",
    "langfuse>=3.0.9",
    "openai>=1.93.0",
    "openinference-instrumentation-openai>=0.1.30",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
]
